# console-conf-snap

./: README.md  spread.yaml
.github/workflows/: cla-check.yaml  snap-build-publish-edge.yaml  snap-build-publish.yaml  snap.yaml  tests.yaml
snap/: snapcraft.yaml
static/usr/sbin/: netplan
static/usr/share/subiquity/: console-conf-wait
tests/lib/: nested.sh  prepare-uc.sh  prepare-utils.sh
tests/lib/tools/: imcmp.py
tests/lib/tools/vmcli/: setup.cfg  setup.py
tests/lib/tools/vmcli/vmcli/: __init__.py  main.py
tests/main/smoke/: task.yaml
