[metadata]
name = vmcli
description = A tool for interacting with QEMU VMs
license = GPL-3.0-only

[options]
# TODO bump?
python_requires = >= 3.8
packages =
    vmcli

install_requires =
    telnetlib3

[options.entry_points]
console_scripts =
    vmcli = vmcli:main

[mypy]
strict = True
# TODO bump
python_version = 3.8
warn_unused_configs = True
namespace_packages = True
warn_unused_ignores = False
ignore_missing_imports = True
